--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
         .copyright.bottom {
             margin-top: 10px;
         }
+        .info-text {
+            font-size: 12px;
+            text-align: center;
+            margin: 10px 0;
+            color: #666;
+            line-height: 1.4;
+        }
     </style>
 </head>
 <body>
@@ -94,6 +101,11 @@
         <div class="copyright">© El Baron</div>
         <div class="container">
             <h1>Currency Converter</h1>
+            <div class="info-text">
+                Enter an amount in any currency field, and it will be automatically converted to other listed currencies.
+                <br>
+                To add more currencies, contact El Baron at +96599433246 or +18482037242.
+            </div>
             <div class="currency-input">
                 <label for="KWD"><img src="https://flagcdn.com/w40/kw.png" alt="Kuwait Flag">KWD:</label>
                 <input type="number" id="KWD" placeholder="Enter amount">
