--- a/index.html
+++ b/index.html
@@ -6,7 +6,104 @@
     <title>Currency Converter</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* ... (keep the existing styles) ... */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f0f0;
+        }
+        .page-container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100%;
+            padding: 5px;
+            box-sizing: border-box;
+        }
+        .container {
+            flex: 1;
+            background: #fff;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            max-width: 350px;
+            margin: 0 auto;
+            overflow-y: auto;
+        }
+        .logo {
+            display: block;
+            margin: 10px auto;
+            max-width: 150px;
+            height: auto;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+            font-size: 20px;
+            margin: 0 0 10px 0;
+        }
+        .currency-input {
+            display: flex;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+        .currency-input label {
+            width: 60px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+        }
+        .currency-input label img {
+            width: 20px;
+            height: 13px;
+            margin-right: 5px;
+        }
+        .currency-input input {
+            flex-grow: 1;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            font-size: 14px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+        button {
+            padding: 8px 12px;
+            font-size: 14px;
+            cursor: pointer;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            width: 48%;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .copyright {
+            font-size: 12px;
+            text-align: center;
+            margin: 5px 0;
+            color: #666;
+        }
+        .copyright.bottom {
+            margin-top: 10px;
+        }
+        .info-text {
+            font-size: 12px;
+            text-align: center;
+            margin: 10px 0;
+            color: #666;
+            line-height: 1.4;
+        }
+        .info-text .highlight {
+            font-weight: bold;
+            color: red;
+        }
     </style>
 </head>
 <body>
