--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
                 <label for="PKR"><img src="https://flagcdn.com/w40/pk.png" alt="Pakistan Flag">PKR:</label>
                 <input type="number" id="PKR" placeholder="Enter amount">
             </div>
+            <div class="currency-input">
+                <label for="ILS"><img src="https://flagcdn.com/w40/il.png" alt="Israel Flag">ILS:</label>
+                <input type="number" id="AED" placeholder="Enter amount">
+            </div>
             <div class="button-container">
                 <button id="refreshBtn">Refresh Rates</button>
                 <button id="clearBtn">Clear Fields</button>
