--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div class="currency-input">
                 <label for="ILS"><img src="https://flagcdn.com/w40/il.png" alt="Israel Flag">ILS:</label>
-                <input type="number" id="AED" placeholder="Enter amount">
+                <input type="number" id="ILS" placeholder="Enter amount">
             </div>
             <div class="button-container">
                 <button id="refreshBtn">Refresh Rates</button>
