--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <script>
         console.log('Script started');
 
-        const currencies = ['KWD', 'USD', 'SAR', 'JOD', 'EGP', 'INR', 'PKR', 'GBP', 'EUR', 'CAD', 'AED'];
+        const currencies = ['KWD', 'USD', 'SAR', 'JOD', 'EGP', 'INR', 'PKR', 'GBP', 'EUR', 'CAD', 'AED', 'ILS'];
         let exchangeRates = {};
 
         const translations = {
